--- a/nutrIApp.de/nutrIApp.de.csproj
+++ b/nutrIApp.de/nutrIApp.de.csproj
@@ -61,6 +61,7 @@
 		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
+		<PackageReference Include="OpenAI" Version="2.0.0" />
 	</ItemGroup>
 
 </Project>
