--- a/nutrIApp.de/nutrIApp.de.csproj
+++ b/nutrIApp.de/nutrIApp.de.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net8.0-android;net8.0-ios;net8.0-maccatalyst</TargetFrameworks>
-		<TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows'))">$(TargetFrameworks);net8.0-windows10.0.19041.0</TargetFrameworks>
+		<TargetFrameworks>net8.0-android;net8.0-ios;</TargetFrameworks>
+
 		<!-- Uncomment to also build the tizen app. You will need to install tizen by following this: https://github.com/Samsung/Tizen.NET -->
 		<!-- <TargetFrameworks>$(TargetFrameworks);net8.0-tizen</TargetFrameworks> -->
 
@@ -21,7 +21,7 @@
 		<Nullable>enable</Nullable>
 
 		<!-- Display name -->
-		<ApplicationTitle>nutrIApp.de</ApplicationTitle>
+		<ApplicationTitle>Nutri-Scio</ApplicationTitle>
 
 		<!-- App Identifier -->
 		<ApplicationId>com.companyname.nutriapp.de</ApplicationId>
@@ -47,6 +47,11 @@
 
 		<!-- Images -->
 		<MauiImage Include="Resources\Images\*" />
+		<MauiImage Update="Resources\Images\home.svg" BaseSize="29,29" />
+		<MauiImage Update="Resources\Images\workout.svg" BaseSize="29,29" />
+		<MauiImage Update="Resources\Images\progress.svg" BaseSize="29,29" />
+		<MauiImage Update="Resources\Images\profile.svg" BaseSize="29,29" />
+		<MauiImage Update="Resources\Images\plus.svg" BaseSize="15,15" />
 		<MauiImage Update="Resources\Images\dotnet_bot.png" Resize="True" BaseSize="300,185" />
 
 		<!-- Custom Fonts -->
@@ -58,6 +63,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Azure.AI.OpenAI" Version="1.0.0-beta.8" />
+		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.3.2" />
 		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
